--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "NODE_ENV=production webpack -p && cp src/index.html dist/index.html"
+    "build": "NODE_ENV=production webpack && cp src/index.html dist/index.html"
   },
   "repository": {
     "type": "git",
